ma.txt
g++ -Wall -std=c++20 -g -Iinclude -pthread -MMD -c include/resource/resource.cc -o build/include/resource/resource.o
include/resource/resource.cc: In function ‘resource::io_queue_topology resource::allocate_io_queues(hwloc_topology*&, resource::configuration, std::vector<resource::cpu>)’:
include/resource/resource.cc:191:138: warning: right operand of comma operator has no effect [-Wunused-value]
  191 |         std::cout<<"Warning: number of IO queues (%d) greater than logical cores (%d). Adjusting downwards.\n", num_io_queues, cpus.size();
      |                                                                                                                                          ^
g++ -Wall -std=c++20 -g -Iinclude -pthread -MMD -c test/new_tests/smp_test.cc -o build/test/new_tests/smp_test.o
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh: In static member function ‘static std::unique_ptr<net::packet::impl> net::packet::impl::copy(net::packet::impl*, size_t)’:
include/../include/app/../future/future_all9.hh:3708:29: warning: moving a local object in a return statement prevents copy elision [-Wpessimizing-move]
 3708 |             return std::move(n);
      |                    ~~~~~~~~~^~~
include/../include/app/../future/future_all9.hh:3708:29: note: remove ‘std::move’ call
include/../include/app/../future/future_all9.hh: In static member function ‘static file_desc file_desc::temporary(std::string)’:
include/../include/app/../future/future_all9.hh:4458:9: warning: unused variable ‘r’ [-Wunused-variable]
 4458 |     int r = ::unlink(templat.data());
      |         ^
include/../include/app/../future/future_all9.hh: In static member function ‘static io_priority_class io_queue::register_one_priority_class(std::string, uint32_t)’:
include/../include/app/../future/future_all9.hh:5167:29: warning: moving a local object in a return statement prevents copy elision [-Wpessimizing-move]
 5167 |             return std::move(p);
      |                    ~~~~~~~~~^~~
include/../include/app/../future/future_all9.hh:5167:29: note: remove ‘std::move’ call
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh: In function ‘std::ostream& operator<<(std::ostream&, ipv4_addr)’:
include/../include/app/../future/future_all9.hh:5483:1: warning: no return statement in function returning non-void [-Wreturn-type]
 5483 | }
      | ^
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh: At global scope:
include/../include/app/../future/future_all9.hh:6573:14: error: ‘future<> reactor::writeable(pollable_fd_state&)’ cannot be overloaded with ‘future<> reactor::writeable(pollable_fd_state&)’
 6573 |     future<> writeable(pollable_fd_state& fd) {
      |              ^~~~~~~~~
include/../include/app/../future/future_all9.hh:6555:14: note: previous declaration ‘future<> reactor::writeable(pollable_fd_state&)’
 6555 |     future<> writeable(pollable_fd_state& fd) {
      |              ^~~~~~~~~
include/../include/app/../future/future_all9.hh: In member function ‘void reactor::start_epoll()’:
include/../include/app/../future/future_all9.hh:6698:69: error: no matching function for call to ‘reactor::poller::poller(std::_MakeUniq<reactor::epoll_pollfn>::__single_object)’
 6698 |         _epoll_poller = poller(std::make_unique<epoll_pollfn>(*this));
      |                                                                     ^
include/../include/app/../future/future_all9.hh:6399:9: note: candidate: ‘reactor::poller::poller(reactor::poller&&)’
 6399 |         poller(poller&& x);
      |         ^~~~~~
include/../include/app/../future/future_all9.hh:6399:25: note:   no known conversion for argument 1 from ‘std::_MakeUniq<reactor::epoll_pollfn>::__single_object’ {aka ‘std::unique_ptr<reactor::epoll_pollfn, std::default_delete<reactor::epoll_pollfn> >’} to ‘reactor::poller&&’
 6399 |         poller(poller&& x);
      |                ~~~~~~~~~^
include/../include/app/../future/future_all9.hh:6394:9: note: candidate: ‘reactor::poller::poller(std::unique_ptr<pollfn>)’
 6394 |         poller(std::unique_ptr<pollfn> fn)
      |         ^~~~~~
include/../include/app/../future/future_all9.hh:6394:40: note:   no known conversion for argument 1 from ‘unique_ptr<reactor::epoll_pollfn,default_delete<reactor::epoll_pollfn>>’ to ‘unique_ptr<pollfn,default_delete<pollfn>>’
 6394 |         poller(std::unique_ptr<pollfn> fn)
      |                ~~~~~~~~~~~~~~~~~~~~~~~~^~
include/../include/app/../future/future_all9.hh: In member function ‘void reactor::start_aio_eventfd_loop()’:
include/../include/app/../future/future_all9.hh:7827:26: error: ‘repeat’ was not declared in this scope
 7827 |     future<> loop_done = repeat([this] {
      |                          ^~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh: In member function ‘void reactor::enable_timer(std::chrono::_V2::steady_clock::time_point)’:
include/../include/app/../future/future_all9.hh:9094:10: warning: unused variable ‘ret’ [-Wunused-variable]
 9094 |     auto ret = timer_settime(_steady_clock_timer, TIMER_ABSTIME, &its, NULL);
      |          ^~~
include/../include/app/../future/future_all9.hh: In member function ‘void thread_context::setup()’:
include/../include/app/../future/future_all9.hh:9698:10: warning: unused variable ‘r’ [-Wunused-variable]
 9698 |     auto r = getcontext(&initial_context);//保存当前上下文到initial_context中.
      |          ^
include/../include/app/../future/future_all9.hh: In member function ‘int reactor::run()’:
include/../include/app/../future/future_all9.hh:9999:11: warning: unused variable ‘task_quote_itimerspec’ [-Wunused-variable]
 9999 |     auto& task_quote_itimerspec = its;
      |           ^~~~~~~~~~~~~~~~~~~~~
include/../include/app/../future/future_all9.hh:10005:10: warning: unused variable ‘idle’ [-Wunused-variable]
10005 |     bool idle = false;
      |          ^~~~
include/../include/app/../future/future_all9.hh: In member function ‘future<> reactor::run_exit_tasks()’:
include/../include/app/../future/future_all9.hh:10096:1: warning: no return statement in function returning non-void [-Wreturn-type]
10096 | }
      | ^
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh: In constructor ‘reactor::reactor(unsigned int)’:
include/../include/app/../future/future_all9.hh:6527:18: warning: ‘reactor::_io_context’ will be initialized after [-Wreorder]
 6527 |     io_context_t _io_context;
      |                  ^~~~~~~~~~~
include/../include/app/../future/future_all9.hh:6478:15: warning:   ‘semaphore reactor::_io_context_available’ [-Wreorder]
 6478 |     semaphore _io_context_available;
      |               ^~~~~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh:10098:1: warning:   when initialized here [-Wreorder]
10098 | reactor::reactor(unsigned id)
      | ^~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh:6604:16: warning: ‘reactor::_reuseport’ will be initialized after [-Wreorder]
 6604 |     const bool _reuseport;
      |                ^~~~~~~~~~
include/../include/app/../future/future_all9.hh:6427:15: warning:   ‘file_desc reactor::_task_quota_timer’ [-Wreorder]
 6427 |     file_desc _task_quota_timer;
      |               ^~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh:10098:1: warning:   when initialized here [-Wreorder]
10098 | reactor::reactor(unsigned id)
      | ^~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh: In instantiation of ‘void install_oneshot_signal_handler() [with int Signal = 11; void (* Func)() = sigsegv_action]’:
include/../include/app/../future/future_all9.hh:10267:61:   required from here
include/../include/app/../future/future_all9.hh:7315:10: warning: unused variable ‘r’ [-Wunused-variable]
 7315 |     auto r = ::sigaction(Signal, &sa, nullptr);
      |          ^
include/../include/app/../future/future_all9.hh: In instantiation of ‘void install_oneshot_signal_handler() [with int Signal = 6; void (* Func)() = sigabrt_action]’:
include/../include/app/../future/future_all9.hh:10268:61:   required from here
include/../include/app/../future/future_all9.hh:7315:10: warning: unused variable ‘r’ [-Wunused-variable]
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all9.hh: At global scope:
include/../include/app/../future/future_all9.hh:9833:18: warning: ‘always_inline’ function might not be inlinable [-Wattributes]
 9833 | std::tuple<T...> future<T...>::get() {
      |                  ^~~~~~~~~~~~
include/../include/app/../future/future_all9.hh:9833:18: warning: ‘always_inline’ function might not be inlinable [-Wattributes]
makefile:178: recipe for target 'build/test/new_tests/smp_test.o' failed
make: *** [build/test/new_tests/smp_test.o] Error 1
